--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
         <title>Webpack App</title>
     </head>
     <body>
+        <div id="options">
+            <input type="checkbox" checked id="fill-checkbox"> Fill <br>
+            <input type="checkbox" checked id="random-color-checkbox"> Random Color <br>
+            <button id="render">render</button>
+        </div>
     </body>
 </html>
